Improve footer & about page

--- a/_posts/2014-11-22-better-google-tasks.html
+++ b/_posts/2014-11-22-better-google-tasks.html
@@ -10,7 +10,6 @@ img: better-google-tasks.jpg
 intro: "I’m kind of in love with Todo lists, which is a bit sad really. I make lists all the time and love ticking things off. Sometimes I write things that I’ve already done, just to put a line through it."
 ---
 
-
 <p>I’m kind of in love with Todo lists, which is a bit sad really. I make lists all the time and love ticking things off. Sometimes I write things that I’ve already done, just to put a line through it.</p>
 
 <p><del>Write a blog post</del></p>
@@ -19,13 +18,22 @@ intro: "I’m kind of in love with Todo lists, which is a bit sad really. I make
 
 <p>The trouble is, there’s no real good way of using Google Tasks in a desktop browser.</p>
 
+<div class="grid wide">
+    <div class="col-1-2">
+      <img src="/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
+    </div>
+    <div class="col-1-2">
+      <img src="/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
+    </div>
+</div>
+
 <p>Image of screenshot</p>
 
 <p>Google stopped developing their tasks browser app years ago and it looks pretty dated now, and not a great thing to look at for long periods of time.</p>
 
 <p>I decided to add my own styles on top of Google Tasks, just for me really. I wanted to make a thing I stare at every day better and easier to use. I took away some of the noise, made certain things more useable and generally made it more satisfying to check off tasks.</p>
 
-<img src="/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
+<img src="/downloads/better-google-tasks.jpg" alt="Better Google Tasks" class="wide" />
 
 <p>It’s not amazing, the code is pretty horrible and there are loads of things I’d like to improve, but it’s a bit better.</p>
 
