--- a/about/index.html
+++ b/about/index.html
@@ -1,10 +1,10 @@
 ---
 layout: blank
-body-class: about
+body-class: about nav-fixed inverted
 ---
 <div class="about-header">
   <div class="hello-wrap">
-    <img src="/img/hello.png" alt="Hello, my name is Rich" class="hello-bubble">
+<!--     <img src="/img/hello.png" alt="Hello, my name is Rich" class="hello-bubble"> -->
   </div>
 </div>
 
@@ -12,7 +12,7 @@ body-class: about
   <div class="lower-strip">
     <div class="about-wrap anim-150 mt-3">
       <h2 class="about-intro">
-        I’m a designer who loves to make things, tell stories and solve problems.
+        Hello my name is Rich. I’m a designer, illustrator and maker of things.
       </h2>
 
       <ul class="listy listy-big unstyled">
@@ -29,7 +29,7 @@ body-class: about
             <img src="/img/blog-tn.jpg" alt="My blog">
           </a>
           <div class="listy-right">
-            I spend lots of my time drawing, and regularly post doodles, ideas and thoughts <a href="http://blog.richwells.me">here</a>. It's my sketchbook for the internet.
+            Rarely do I leave the house without a notebook, camera and a bag full of pens. <a href="http://blog.richwells.me">My blog</a> is a record of drawings, ideas and what I get up to.
           </div>
         </li>
         <li>
@@ -37,7 +37,7 @@ body-class: about
             <img src="/img/sophie-tn.jpg" alt="Day off with Sophie">
           </a>
           <div class="listy-right">
-            On Tuesdays I take the day off to explore the world with my daughter Sophie. We have a lot of fun, and <a href="http://dayoffwithsophie.tumblr.com/" target="_blank">this blog</a> records what we get up to.
+            On Tuesdays I take the day off to explore the world with my daughter Sophie. Each week we do something new, and share it on our <a href="http://dayoffwithsophie.tumblr.com/" target="_blank">Daddy Daycare blog</a>.
           </div>
         </li>
         <li>
