--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@ body-class: about nav-fixed inverted
             <img src="/img/yoomee-tn.jpg" alt="Yoomee Digital">
           </a>
           <div class="listy-right">
-            I’m creative director at <a href="http://yoomee.com" class="list-with-img-link" target="_blank">Yoomee</a>. We build websites for charities and organisations who want to do good things.
+            I’m creative director at <a href="http://yoomee.com" class="list-with-img-link" target="_blank">Yoomee</a>. We build websites for charities and organisations who want to improve the world.
           </div>
         </li>
         <li>
@@ -29,7 +29,8 @@ body-class: about nav-fixed inverted
             <img src="/img/blog-tn.jpg" alt="My blog">
           </a>
           <div class="listy-right">
-            Rarely do I leave the house without a notebook, camera and a bag full of pens. <a href="http://blog.richwells.me">My blog</a> is a record of drawings, ideas and what I get up to.
+            I spend lots of time drawing, taking photos, coding things and telling stories. <a href="http://blog.richwells.me">My blog</a> records what I get up to and what I’m working on.
+
           </div>
         </li>
         <li>
@@ -37,7 +38,7 @@ body-class: about nav-fixed inverted
             <img src="/img/sophie-tn.jpg" alt="Day off with Sophie">
           </a>
           <div class="listy-right">
-            On Tuesdays I take the day off to explore the world with my daughter Sophie. Each week we do something new, and share it on our <a href="http://dayoffwithsophie.tumblr.com/" target="_blank">Daddy Daycare blog</a>.
+            On Tuesdays I take the day off to explore the world with my daughter Sophie. Each week we do something new and share it on our <a href="http://dayoffwithsophie.tumblr.com/" target="_blank">Daddy Daycare blog</a>.
           </div>
         </li>
         <li>
