--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: default
 body-class: blog
 ---
 
-
-<!-- {% for tag in site.tags %}
+{%comment%}
+ {% for tag in site.tags %}
     <a href="/tag/{{ tag | first | slugize }}/">
         {{ tag | first }}
     </a>
-{% endfor %} -->
-
+{% endfor %}
+{%endcomment%}
 <div class="container">
   <div class="posts">
     {% for post in paginator.posts %}
