--- a/_posts/tumblr/2014-09-15-the-four-knows-of-creativity.html
+++ b/_posts/tumblr/2014-09-15-the-four-knows-of-creativity.html
@@ -11,6 +11,6 @@ tumblr_url: http://blog.richwells.me/post/97562644683/the-four-knows-of-creativi
 intro: "Last weekend I did a talk at the Tearfund Rhythms Visual Communication day. I shared a bit of my story and a few things that I’ve found helpful to know when creating and communicating.
 It was great to be part of the day and to chat about creativity with some really inspiring young people. There’s a bit of a transcript thing on my <a href='http://www.slideshare.net/richiewells/four-knowsofcreativity' title='Rich Wells slideshare presentation'>slideshare</a>."
 ---
-<p><iframe frameborder="0" height="536" marginheight="0" marginwidth="0" scrolling="no" src="//www.slideshare.net/slideshow/embed_code/39096666" width="662"> </iframe></p>
+<div class="fitvids"><iframe frameborder="0" height="536" marginheight="0" marginwidth="0" scrolling="no" src="//www.slideshare.net/slideshow/embed_code/39096666" width="662"> </iframe></div>
 <p><br/>Last weekend I did a talk at the Tearfund Rhythms Visual Communication day. I shared a bit of my story and a few things that I&#8217;ve found helpful to know when creating and communicating.</p>
 <p>It was great to be part of the day and to chat about creativity with some really inspiring young people. There&#8217;s a bit of a transcript thing on my <strong><a href="http://www.slideshare.net/richiewells/four-knowsofcreativity" title="Rich Wells slideshare presentation">slideshare</a>.</strong></p>
