--- a/_posts/2014-11-22-better-google-tasks.html
+++ b/_posts/2014-11-22-better-google-tasks.html
@@ -22,7 +22,7 @@ intro: "I’m kind of in love with Todo lists, which is a bit sad really. I make
 
 <div class="grid wide">
     <div class="col-1-2">
-      <img src="/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
+      <img src="{{ site.baseurl }}/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
     </div>
     <div class="col-1-2">
       <img src="/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
