More link fixes

--- a/_posts/2014-11-22-better-google-tasks.html
+++ b/_posts/2014-11-22-better-google-tasks.html
@@ -25,7 +25,7 @@ intro: "I’m kind of in love with Todo lists, which is a bit sad really. I make
       <img src="{{ site.baseurl }}/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
     </div>
     <div class="col-1-2">
-      <img src="/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
+      <img src="{{ site.baseurl }}/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
     </div>
 </div>
 
@@ -35,7 +35,7 @@ intro: "I’m kind of in love with Todo lists, which is a bit sad really. I make
 
 <p>I decided to add my own styles on top of Google Tasks, just for me really. I wanted to make a thing I stare at every day better and easier to use. I took away some of the noise, made certain things more useable and generally made it more satisfying to check off tasks.</p>
 
-<img src="/downloads/better-google-tasks.jpg" alt="Better Google Tasks" class="wide" />
+<img src="{{ site.baseurl }}/downloads/better-google-tasks.jpg" alt="Better Google Tasks" class="wide" />
 
 <p>It’s not amazing, the code is pretty horrible and there are loads of things I’d like to improve, but it’s a bit better.</p>
 
