--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@ body-class: about nav-fixed inverted
 ---
 <div class="about-header">
   <div class="hello-wrap">
-<!--     <img src="/img/hello.png" alt="Hello, my name is Rich" class="hello-bubble"> -->
+<!--     <img src="{{ site.baseurl }}/img/hello.png" alt="Hello, my name is Rich" class="hello-bubble"> -->
   </div>
 </div>
 
@@ -18,7 +18,7 @@ body-class: about nav-fixed inverted
       <ul class="listy listy-big unstyled">
         <li>
           <a href="http://yoomee.com" class="listy-left" target="_blank">
-            <img src="/img/yoomee-tn.jpg" alt="Yoomee Digital">
+            <img src="{{ site.baseurl }}/img/yoomee-tn.jpg" alt="Yoomee Digital">
           </a>
           <div class="listy-right">
             I’m creative director at <a href="http://yoomee.com" class="list-with-img-link" target="_blank">Yoomee</a>. We build websites for charities and organisations who want to improve the world.
@@ -26,7 +26,7 @@ body-class: about nav-fixed inverted
         </li>
         <li>
           <a href="http://blog.richwells.me" class="listy-left" target="_blank">
-            <img src="/img/blog-tn.jpg" alt="My blog">
+            <img src="{{ site.baseurl }}/img/blog-tn.jpg" alt="My blog">
           </a>
           <div class="listy-right">
             I spend lots of time drawing, taking photos, coding things and telling stories. <a href="http://blog.richwells.me">My blog</a> records what I get up to and what I’m working on.
@@ -35,7 +35,7 @@ body-class: about nav-fixed inverted
         </li>
         <li>
           <a href="http://dayoffwithsophie.tumblr.com" class="listy-left" target="_blank">
-            <img src="/img/sophie-tn.jpg" alt="Day off with Sophie">
+            <img src="{{ site.baseurl }}/img/sophie-tn.jpg" alt="Day off with Sophie">
           </a>
           <div class="listy-right">
             On Tuesdays I take the day off to explore the world with my daughter Sophie. Each week we do something new and share it on our <a href="http://dayoffwithsophie.tumblr.com/" target="_blank">Daddy Daycare blog</a>.
@@ -43,7 +43,7 @@ body-class: about nav-fixed inverted
         </li>
         <li>
           <a href="http://100daybiblechallenge.com" class="listy-left" target="_blank">
-            <img src="/img/100-tn.jpg" alt="Day off with Sophie">
+            <img src="{{ site.baseurl }}/img/100-tn.jpg" alt="Day off with Sophie">
           </a>
           <div class="listy-right">
             I like a challenge. A while back I created 100 illustrations over 100 days for a project I set up at my church. You can download all the images for free <a href="http://100daybiblechallenge.com" target="_blank">here.</a>
