Fixing blog image links

--- a/_posts/2014-11-18-christmas-film.html
+++ b/_posts/2014-11-18-christmas-film.html
@@ -9,6 +9,6 @@ tags:
 - photos
 ---
 
-<img src="/downloads/christmas-film.jpg" alt="" class="wide"/>
+<img src="{{ site.baseurl }}/downloads/christmas-film.jpg" alt="" class="wide"/>
 
 <p>Enjoyed daddy daycare this week.</p>
