--- a/_posts/tumblr/2011-11-03-elloello.html
+++ b/_posts/tumblr/2011-11-03-elloello.html
@@ -9,6 +9,6 @@ tags:
 - work
 tumblr_url: http://blog.richwells.me/post/40201742577/elloello
 ---
-<img src="/downloads/tumblr_files/tumblr_mgfkff4R6o1rr6vpvo1_1280.jpg"/><br/><p>Want to write like me? Now you can. </p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mgfkff4R6o1rr6vpvo1_1280.jpg"/><br/><p>Want to write like me? Now you can. </p>
 <p class="p1"><a href="http://dl.dropbox.com/u/292336/elloello.zip" title="Download elloello!">Download ElloEllo here.</a></p>
 <p class="p3"><span class="s1">Licensed under a <a href="http://creativecommons.org/licenses/by-sa/3.0/"><span class="s2">Creative Commons Attribution-ShareAlike 3.0 Unported License</span></a>.</span></p>
