--- a/_posts/tumblr/2011-12-05-terracotta-army.html
+++ b/_posts/tumblr/2011-12-05-terracotta-army.html
@@ -9,4 +9,4 @@ tags:
 - photos
 tumblr_url: http://blog.richwells.me/post/71643887391/terracotta-army
 ---
-<img src="/downloads/tumblr_files/tumblr_mymoidF3Qu1rr6vpvo1_1280.jpg"/><br/><p>Tourists and two thousand year old soldier. A photo I took on our trip to the Terracotta Army.</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mymoidF3Qu1rr6vpvo1_1280.jpg"/><br/><p>Tourists and two thousand year old soldier. A photo I took on our trip to the Terracotta Army.</p>
