--- a/_posts/tumblr/2012-01-03-.html
+++ b/_posts/tumblr/2012-01-03-.html
@@ -9,4 +9,4 @@ tags:
 - imagination
 tumblr_url: http://blog.richwells.me/post/71651118553
 ---
-<img src="/downloads/tumblr_files/tumblr_mymsccUInc1rr6vpvo1_1280.jpg"/><br/>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mymsccUInc1rr6vpvo1_1280.jpg"/><br/>
