--- a/_posts/tumblr/2012-10-12-obsolete-formats.html
+++ b/_posts/tumblr/2012-10-12-obsolete-formats.html
@@ -9,4 +9,4 @@ tags:
 - Illustration
 tumblr_url: http://blog.richwells.me/post/70934545032/obsolete-formats
 ---
-<img src="/downloads/tumblr_files/tumblr_mya41bJ0G71rr6vpvo1_1280.jpg"/><br/><p>Obsolete formats</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mya41bJ0G71rr6vpvo1_1280.jpg"/><br/><p>Obsolete formats</p>
