--- a/_posts/tumblr/2012-10-20-.html
+++ b/_posts/tumblr/2012-10-20-.html
@@ -10,4 +10,4 @@ tags:
 - eames
 tumblr_url: http://blog.richwells.me/post/71084571325
 ---
-<img src="/downloads/tumblr_files/tumblr_mycnqq9DPH1rr6vpvo1_1280.jpg"/><br/>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mycnqq9DPH1rr6vpvo1_1280.jpg"/><br/>
