--- a/_posts/tumblr/2012-11-26-.html
+++ b/_posts/tumblr/2012-11-26-.html
@@ -8,4 +8,4 @@ tags:
 - forgiveness
 tumblr_url: http://blog.richwells.me/post/71755241647
 ---
-<img src="/downloads/tumblr_files/tumblr_myoh8pki8K1rr6vpvo1_1280.jpg"/><br/>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_myoh8pki8K1rr6vpvo1_1280.jpg"/><br/>
