--- a/_posts/tumblr/2012-12-05-.html
+++ b/_posts/tumblr/2012-12-05-.html
@@ -7,4 +7,4 @@ tags:
 - sketches
 tumblr_url: http://blog.richwells.me/post/71756074815
 ---
-<img src="/downloads/tumblr_files/tumblr_myohrk2wtq1rr6vpvo1_1280.jpg"/><br/>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_myohrk2wtq1rr6vpvo1_1280.jpg"/><br/>
