--- a/_posts/tumblr/2013-01-03-a-walk-through-the-botanical-gardens.html
+++ b/_posts/tumblr/2013-01-03-a-walk-through-the-botanical-gardens.html
@@ -8,4 +8,4 @@ tags:
 - sheffield
 tumblr_url: http://blog.richwells.me/post/70815103913/a-walk-through-the-botanical-gardens
 ---
-<img src="/downloads/tumblr_files/tumblr_my85dv11B91rr6vpvo1_1280.jpg"/><br/><p><span>A walk through the Botanical Gardens.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my85dv11B91rr6vpvo1_1280.jpg"/><br/><p><span>A walk through the Botanical Gardens.</span></p>
