--- a/_posts/tumblr/2013-01-10-a-few-procreate-ipad-paintings-i-received-an.html
+++ b/_posts/tumblr/2013-01-10-a-few-procreate-ipad-paintings-i-received-an.html
@@ -10,4 +10,4 @@ tags:
 - sketches
 tumblr_url: http://blog.richwells.me/post/40182633258/a-few-procreate-ipad-paintings-i-received-an
 ---
-<img src="/downloads/tumblr_files/tumblr_mgf6w0ruJ81rr6vpvo1_1280.jpg"/><br/><img src="/downloads/tumblr_files/tumblr_mgf6w0ruJ81rr6vpvo2_1280.jpg"/><br/><img src="/downloads/tumblr_files/tumblr_mgf6w0ruJ81rr6vpvo3_1280.jpg"/><br/><img src="/downloads/tumblr_files/tumblr_mgf6w0ruJ81rr6vpvo4_1280.jpg"/><br/><br/><p>A few procreate iPad paintings. I received an Adonit Jot stylus for Christmas and I&#8217;m loving how easy it is to draw and write with it.</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mgf6w0ruJ81rr6vpvo1_1280.jpg"/><br/><img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mgf6w0ruJ81rr6vpvo2_1280.jpg"/><br/><img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mgf6w0ruJ81rr6vpvo3_1280.jpg"/><br/><img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mgf6w0ruJ81rr6vpvo4_1280.jpg"/><br/><br/><p>A few procreate iPad paintings. I received an Adonit Jot stylus for Christmas and I&#8217;m loving how easy it is to draw and write with it.</p>
