--- a/_posts/tumblr/2013-01-18-park-hill-flats-just-as-the-snow-came.html
+++ b/_posts/tumblr/2013-01-18-park-hill-flats-just-as-the-snow-came.html
@@ -9,4 +9,4 @@ tags:
 - sketches
 tumblr_url: http://blog.richwells.me/post/70816152151/park-hill-flats-just-as-the-snow-came
 ---
-<img src="/downloads/tumblr_files/tumblr_my85wdSSXu1rr6vpvo1_1280.jpg"/><br/><p><span>Park Hill Flats, just as the snow came.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my85wdSSXu1rr6vpvo1_1280.jpg"/><br/><p><span>Park Hill Flats, just as the snow came.</span></p>
