--- a/_posts/tumblr/2013-01-20-sheffield-in-the-snow-snapped-this-on-my-walk-to.html
+++ b/_posts/tumblr/2013-01-20-sheffield-in-the-snow-snapped-this-on-my-walk-to.html
@@ -9,4 +9,4 @@ tags:
 - blake street
 tumblr_url: http://blog.richwells.me/post/71644596508/sheffield-in-the-snow-snapped-this-on-my-walk-to
 ---
-<img src="/downloads/tumblr_files/tumblr_mymowwdjZI1rr6vpvo1_1280.jpg"/><br/><p>Sheffield in the snow. Snapped this on my walk to work. No cycling in this weather!</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mymowwdjZI1rr6vpvo1_1280.jpg"/><br/><p>Sheffield in the snow. Snapped this on my walk to work. No cycling in this weather!</p>
