--- a/_posts/tumblr/2013-02-06-nick-from-motore-cafe-by-the-station-best-coffee.html
+++ b/_posts/tumblr/2013-02-06-nick-from-motore-cafe-by-the-station-best-coffee.html
@@ -10,4 +10,4 @@ tags:
 - procreate
 tumblr_url: http://blog.richwells.me/post/70822584854/nick-from-motore-cafe-by-the-station-best-coffee
 ---
-<img src="/downloads/tumblr_files/tumblr_my890wRPOk1rr6vpvo1_1280.jpg"/><br/><p><span>Nick from Motore Café by the station. Best coffee in Sheffield!</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my890wRPOk1rr6vpvo1_1280.jpg"/><br/><p><span>Nick from Motore Café by the station. Best coffee in Sheffield!</span></p>
