--- a/_posts/tumblr/2013-02-15-the-view-from-the-back-of-the-electricworks-the.html
+++ b/_posts/tumblr/2013-02-15-the-view-from-the-back-of-the-electricworks-the.html
@@ -9,4 +9,4 @@ tags:
 - sketches
 tumblr_url: http://blog.richwells.me/post/70822925337/the-view-from-the-back-of-the-electricworks-the
 ---
-<img src="/downloads/tumblr_files/tumblr_my896pIbiB1rr6vpvo1_1280.jpg"/><br/><p><span>The view from the back of the </span><a href="http://electric-works.net/">electricworks</a><span>, the building that I work in. I often sit here and have my lunch when the sun’s out. It wasn’t yesterday, and the sleet made sure I didn’t stay out for too long.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my896pIbiB1rr6vpvo1_1280.jpg"/><br/><p><span>The view from the back of the </span><a href="http://electric-works.net/">electricworks</a><span>, the building that I work in. I often sit here and have my lunch when the sun’s out. It wasn’t yesterday, and the sleet made sure I didn’t stay out for too long.</span></p>
