--- a/_posts/tumblr/2013-02-23-sunset-over-higger-tor-in-the-peak-district.html
+++ b/_posts/tumblr/2013-02-23-sunset-over-higger-tor-in-the-peak-district.html
@@ -10,4 +10,4 @@ tags:
 - procreate
 tumblr_url: http://blog.richwells.me/post/70823085879/sunset-over-higger-tor-in-the-peak-district
 ---
-<img src="/downloads/tumblr_files/tumblr_my899imrJb1rr6vpvo1_1280.jpg"/><br/><p><span>Sunset over Higger Tor in the Peak District.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my899imrJb1rr6vpvo1_1280.jpg"/><br/><p><span>Sunset over Higger Tor in the Peak District.</span></p>
