--- a/_posts/tumblr/2013-03-20-my-ipad-sketchnotes-from-tina-roth-eisenbergs.html
+++ b/_posts/tumblr/2013-03-20-my-ipad-sketchnotes-from-tina-roth-eisenbergs.html
@@ -10,4 +10,4 @@ tags:
 - sketches
 tumblr_url: http://blog.richwells.me/post/71086683365/my-ipad-sketchnotes-from-tina-roth-eisenbergs
 ---
-<img src="/downloads/tumblr_files/tumblr_mycpa5WphM1rr6vpvo1_1280.png"/><br/><p>My iPad sketchnotes from Tina Roth Eisenberg&#8217;s keynote talk at South by Southwest.</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mycpa5WphM1rr6vpvo1_1280.png"/><br/><p>My iPad sketchnotes from Tina Roth Eisenberg&#8217;s keynote talk at South by Southwest.</p>
