--- a/_posts/tumblr/2013-03-23-my-ipad-sketchnotes-from-elon-musks-keynote-talk.html
+++ b/_posts/tumblr/2013-03-23-my-ipad-sketchnotes-from-elon-musks-keynote-talk.html
@@ -11,4 +11,4 @@ tags:
 - work
 tumblr_url: http://blog.richwells.me/post/71086798446/my-ipad-sketchnotes-from-elon-musks-keynote-talk
 ---
-<img src="/downloads/tumblr_files/tumblr_mycpd9AIDL1rr6vpvo1_1280.png"/><br/><p>My iPad sketchnotes from Elon Musk’s keynote talk at South by Southwest this year. The guy is a genius, but sad to hear that he doesn’t have time to spend with his kids.</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mycpd9AIDL1rr6vpvo1_1280.png"/><br/><p>My iPad sketchnotes from Elon Musk’s keynote talk at South by Southwest this year. The guy is a genius, but sad to hear that he doesn’t have time to spend with his kids.</p>
