--- a/_posts/tumblr/2013-04-04-the-sheffield-tap-probably-the-best-railway.html
+++ b/_posts/tumblr/2013-04-04-the-sheffield-tap-probably-the-best-railway.html
@@ -10,4 +10,4 @@ tags:
 - sheffield sketches
 tumblr_url: http://blog.richwells.me/post/70823283763/the-sheffield-tap-probably-the-best-railway
 ---
-<img src="/downloads/tumblr_files/tumblr_my89cymZcf1rr6vpvo1_1280.jpg"/><br/><p><span>The Sheffield Tap, probably the best railway station pub in the country in my opinion. Also the closest to where we work. Need to do some sketches of the </span><a href="http://www.guardian.co.uk/uk/the-northerner/2013/mar/20/sheffield-pubs" target="_blank">inside</a><span> at some point.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my89cymZcf1rr6vpvo1_1280.jpg"/><br/><p><span>The Sheffield Tap, probably the best railway station pub in the country in my opinion. Also the closest to where we work. Need to do some sketches of the </span><a href="http://www.guardian.co.uk/uk/the-northerner/2013/mar/20/sheffield-pubs" target="_blank">inside</a><span> at some point.</span></p>
