--- a/_posts/tumblr/2013-04-17-the-side-entrance-to-ponds-forge.html
+++ b/_posts/tumblr/2013-04-17-the-side-entrance-to-ponds-forge.html
@@ -9,4 +9,4 @@ tags:
 - sketches
 tumblr_url: http://blog.richwells.me/post/70823601706/the-side-entrance-to-ponds-forge
 ---
-<img src="/downloads/tumblr_files/tumblr_my89iepJqK1rr6vpvo1_1280.jpg"/><br/><p><span>The side entrance to Ponds Forge.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my89iepJqK1rr6vpvo1_1280.jpg"/><br/><p><span>The side entrance to Ponds Forge.</span></p>
