--- a/_posts/tumblr/2013-04-27-rooftops-of-broomhill-on-a-windy-day.html
+++ b/_posts/tumblr/2013-04-27-rooftops-of-broomhill-on-a-windy-day.html
@@ -10,4 +10,4 @@ tags:
 - procreate
 tumblr_url: http://blog.richwells.me/post/70823746422/rooftops-of-broomhill-on-a-windy-day
 ---
-<img src="/downloads/tumblr_files/tumblr_my89kvEEEQ1rr6vpvo1_1280.jpg"/><br/><p><span>Rooftops of Broomhill, on a windy day.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my89kvEEEQ1rr6vpvo1_1280.jpg"/><br/><p><span>Rooftops of Broomhill, on a windy day.</span></p>
