--- a/_posts/tumblr/2013-05-10-castle-market.html
+++ b/_posts/tumblr/2013-05-10-castle-market.html
@@ -10,4 +10,4 @@ tags:
 - castle market
 tumblr_url: http://blog.richwells.me/post/70823895363/castle-market
 ---
-<img src="/downloads/tumblr_files/tumblr_my89ngZoAm1rr6vpvo1_1280.jpg"/><br/><p><span>Castle Market</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my89ngZoAm1rr6vpvo1_1280.jpg"/><br/><p><span>Castle Market</span></p>
