--- a/_posts/tumblr/2013-06-11-mac-app-must-haves.html
+++ b/_posts/tumblr/2013-06-11-mac-app-must-haves.html
@@ -12,7 +12,7 @@ tags:
 - thoughts
 tumblr_url: http://blog.richwells.me/post/52710173261/mac-app-must-haves
 ---
-<img src="/downloads/tumblr_files/tumblr_mo8hh2AfHs1rr6vpvo2_r1_1280.jpg"/><br/><p>This week I have gone through the tedious task of wiping my work iMac, installing Mountain Lion (just as <a href="http://www.apple.com/osx/preview/" target="_blank">OSX Mavericks</a><span> is announced - typical!), installing Rails and copying everything back again.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mo8hh2AfHs1rr6vpvo2_r1_1280.jpg"/><br/><p>This week I have gone through the tedious task of wiping my work iMac, installing Mountain Lion (just as <a href="http://www.apple.com/osx/preview/" target="_blank">OSX Mavericks</a><span> is announced - typical!), installing Rails and copying everything back again.</span></p>
 <p>For future reference, and for anyone who’s interested, I’ve come up with a list of mac apps that I can’t do without…</p>
 <p><strong><a href="http://www.trankynam.com/atext/" target="_blank">aText</a></strong><br/><span>Text expanding software. I use it to make code snippet shortcuts, and help me shorten boring repetitive tasks. A big time saver.</span></p>
 <p><a href="https://www.dropbox.com/" target="_blank"><strong>Dropbox</strong></a><br/>Super useful. I put all the current files I’m working on in Dropbox, and then I can pick them up on any machine/device. Also use it to store fonts, resources and preference files.</p>
