--- a/_posts/tumblr/2013-07-03-making-fires-with-some-blokes-in-a-field-near.html
+++ b/_posts/tumblr/2013-07-03-making-fires-with-some-blokes-in-a-field-near.html
@@ -8,4 +8,4 @@ tags:
 - photos
 tumblr_url: http://blog.richwells.me/post/71643356864/making-fires-with-some-blokes-in-a-field-near
 ---
-<img src="/downloads/tumblr_files/tumblr_mymo76G6MP1rr6vpvo2_1280.jpg"/><br/><p>Making fires with some blokes in a field near Swindon at the CVM gathering. </p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mymo76G6MP1rr6vpvo2_1280.jpg"/><br/><p>Making fires with some blokes in a field near Swindon at the CVM gathering. </p>
