--- a/_posts/tumblr/2013-08-25-my-mate-joe-on-the-road-from-edale-up-to-mam-tor.html
+++ b/_posts/tumblr/2013-08-25-my-mate-joe-on-the-road-from-edale-up-to-mam-tor.html
@@ -9,4 +9,4 @@ tags:
 - sketches
 tumblr_url: http://blog.richwells.me/post/70825416843/my-mate-joe-on-the-road-from-edale-up-to-mam-tor
 ---
-<img src="/downloads/tumblr_files/tumblr_my8adpW1zx1rr6vpvo1_1280.jpg"/><br/><p><span>My mate Joe, on the road from Edale up to Mam Tor.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my8adpW1zx1rr6vpvo1_1280.jpg"/><br/><p><span>My mate Joe, on the road from Edale up to Mam Tor.</span></p>
