--- a/_posts/tumblr/2013-10-25-making-art-that-no-one-sees.html
+++ b/_posts/tumblr/2013-10-25-making-art-that-no-one-sees.html
@@ -7,7 +7,7 @@ tags:
 - Thoughts
 tumblr_url: http://blog.richwells.me/post/65040490248/making-art-that-no-one-sees
 ---
-<img src="/downloads/tumblr_files/tumblr_muqb4nrTVw1rr6vpvo1_1280.jpg"/><br/><h2>Making art that no one sees</h2>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_muqb4nrTVw1rr6vpvo1_1280.jpg"/><br/><h2>Making art that no one sees</h2>
 <p>We recently got back from a two week holiday in Cornwall, and before we left, my wife and I decided to take a break from social media and emails. We removed from our phones all icons which spit out numbers in red dots and made a pact not to touch them until we got back. It&#8217;s something we&#8217;ve done on holidays before and have always found it refreshing to properly disconnect from what&#8217;s going on at home and get some perspective. Recommend it.</p>
 <p>What stood out to me this holiday was that I found it hard initially to stop thinking about &#8216;sharing&#8217; stuff. I&#8217;m definitely not a social media addict, and I don&#8217;t check everything all the time, but I realised that as someone who posts quite a lot of images, I regularly think &#8216;how can I share this?&#8217; </p>
 <p>That&#8217;s not a bad question in itself, but it can be unhealthy if it&#8217;s the main thing you have on your mind when you see something interesting. If you&#8217;re looking at a breathtaking sunset and are thinking &#8216;how can I Instagram this?&#8217;, you&#8217;re probably not enjoying the moment as much as you could be. And thinking too much about how people will react to your work before you&#8217;ve even started, can be a real creativity killer. </p>
