--- a/_posts/tumblr/2013-11-12-buggy-longboarding.html
+++ b/_posts/tumblr/2013-11-12-buggy-longboarding.html
@@ -9,4 +9,4 @@ tags:
 - sheffield
 tumblr_url: http://blog.richwells.me/post/72002870459/buggy-longboarding
 ---
-<img src="/downloads/tumblr_files/tumblr_mysmm4eZws1rr6vpvo1_500.gif"/><br/><p>My first cinemagraph! <a href="http://dayoffwithsophie.tumblr.com/post/68907288358/endcliffe-park">Longboarding in Endcliffe Park</a> on my day off with Sophie. </p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mysmm4eZws1rr6vpvo1_500.gif"/><br/><p>My first cinemagraph! <a href="http://dayoffwithsophie.tumblr.com/post/68907288358/endcliffe-park">Longboarding in Endcliffe Park</a> on my day off with Sophie. </p>
