--- a/_posts/tumblr/2014-01-11-the-level-collective.html
+++ b/_posts/tumblr/2014-01-11-the-level-collective.html
@@ -7,4 +7,4 @@ tags:
 - work
 tumblr_url: http://blog.richwells.me/post/72964316604/the-level-collective
 ---
-<img src="/downloads/tumblr_files/tumblr_mz6e65o6jT1rr6vpvo3_r1_1280.jpg"/><br/><p>A T-shirt design I did for <a href="http://www.thelevelcollective.co.uk/" target="_blank">The Level Collective</a>, an independent ethical clothing label based in Sheffield. They do some great work with a charity in Romania and make some quality clothing. You can buy my T-shirt <a href="http://www.thelevelcollective.co.uk/shop/faith_hope_love/" title="The Level Collective Shop">here</a>.</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mz6e65o6jT1rr6vpvo3_r1_1280.jpg"/><br/><p>A T-shirt design I did for <a href="http://www.thelevelcollective.co.uk/" target="_blank">The Level Collective</a>, an independent ethical clothing label based in Sheffield. They do some great work with a charity in Romania and make some quality clothing. You can buy my T-shirt <a href="http://www.thelevelcollective.co.uk/shop/faith_hope_love/" title="The Level Collective Shop">here</a>.</p>
