--- a/_posts/tumblr/2014-01-13-coffee-packets.html
+++ b/_posts/tumblr/2014-01-13-coffee-packets.html
@@ -11,6 +11,6 @@ tags:
 - coffee
 tumblr_url: http://blog.richwells.me/post/73249103251/coffee-packets
 ---
-<img src="/downloads/coffee-packets.jpg"/><br/><p>After collecting coffee packets for the last 5 years (not really sure why), I have decided to do something creative with them.</p>
+<img src="{{ site.baseurl }}/downloads/coffee-packets.jpg"/><br/><p>After collecting coffee packets for the last 5 years (not really sure why), I have decided to do something creative with them.</p>
 <p>This is my first ever coffee packet typeface. I cut each one out by hand and covered my room with stale coffee grounds - it was a labour of love! It&#8217;s early days (there aren&#8217;t any numerals or punctuation yet), but you can download the images for free here. Make something! (I&#8217;d love to know what you come up with).</p>
 <p><strong><a href="http://goo.gl/KuuIxR">Download the letters here</a></strong>.</p>
