--- a/_posts/tumblr/2014-03-17-slough.html
+++ b/_posts/tumblr/2014-03-17-slough.html
@@ -7,7 +7,7 @@ tags:
 - tfbloggers
 tumblr_url: http://blog.richwells.me/post/79860841134/slough
 ---
-<img src="/downloads/tumblr_files/tumblr_n2kw38BvSg1rr6vpvo1_1280.jpg"/><br/><p>Greetings from Slough! I’m in a budget hotel ‘near’ Heathrow Terminal 5, struggling to move after getting my money’s worth from the breakfast buffet.</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2kw38BvSg1rr6vpvo1_1280.jpg"/><br/><p>Greetings from Slough! I’m in a budget hotel ‘near’ Heathrow Terminal 5, struggling to move after getting my money’s worth from the breakfast buffet.</p>
 
 <p>We’re flying at mid afternoon today to Bankok, and then on from there to Phnom Penh, the capital of Cambodia. Selfishly I’m really looking forward to 12 hours or so of sitting, where it’s perfectly acceptable to watch three films back to back and sleep whenever you like. It’s been a long month!</p>
 
