--- a/_posts/tumblr/2014-03-19-umoja.html
+++ b/_posts/tumblr/2014-03-19-umoja.html
@@ -8,7 +8,7 @@ tags:
 - cambodia
 tumblr_url: http://blog.richwells.me/post/80086511538/umoja
 ---
-<img src="/downloads/tumblr_files/tumblr_n2p6d1hi0H1rr6vpvo1_1280.jpg"/><br/><p>After an egg and some funny tasting coffee for breakfast we met a girl called Kanya, who works for International Cooperation Cambodia (ICC), the local organisation that Tearfund works through here in Cambodia.</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2p6d1hi0H1rr6vpvo1_1280.jpg"/><br/><p>After an egg and some funny tasting coffee for breakfast we met a girl called Kanya, who works for International Cooperation Cambodia (ICC), the local organisation that Tearfund works through here in Cambodia.</p>
 <p>We take a minibus and travel to their headquarters, on a dusty side road a little out of town. After climbing six flights of incredibly steep stairs we enter a cool air-conditioned room, where we spend the next few hours getting to know who ICC are and what we will be getting up to for the next week.</p>
 <p>This is Harry. He heads up one of ICC&#8217;s projects called the Village Integrated Development Project, or VIDP for short. (Sorry about all the acronyms by the way).<br/><br/></p>
 <p><img alt="" src="http://richwells.me/img/cambodia-genocide-museum0.jpg"/></p>
