--- a/_posts/tumblr/2014-03-20-mmmm-insects.html
+++ b/_posts/tumblr/2014-03-20-mmmm-insects.html
@@ -7,7 +7,7 @@ tags:
 - tfbloggers
 tumblr_url: http://blog.richwells.me/post/80179663987/mmmm-insects
 ---
-<img src="/downloads/tumblr_files/tumblr_n2qybcTBQQ1rr6vpvo1_1280.jpg"/><br/><img src="/downloads/tumblr_files/tumblr_n2qybcTBQQ1rr6vpvo2_1280.jpg"/><br/><br/><p><strong>Try it!</strong></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2qybcTBQQ1rr6vpvo1_1280.jpg"/><br/><img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2qybcTBQQ1rr6vpvo2_1280.jpg"/><br/><br/><p><strong>Try it!</strong></p>
 <p>I remember once hearing Michael Palin (the comedian, travel writer and Sheffielder) talk about eating food in different cultures. I can&#8217;t recall the quote word for word, but he said something like&#8230;</p>
 <blockquote>
 <p>When someone from a different culture offers you jellied sheep&#8217;s eyeballs, don&#8217;t turn them down, you might miss the opportunity to be joyfully surprised.</p>
