--- a/_posts/tumblr/2014-03-21-give.html
+++ b/_posts/tumblr/2014-03-21-give.html
@@ -9,7 +9,7 @@ tags:
 - tearfund
 tumblr_url: http://blog.richwells.me/post/80255761189/give
 ---
-<img src="/downloads/tumblr_files/tumblr_n2sdsa2XUE1rr6vpvo1_1280.jpg"/><br/><p>A country with a brutal history is being given a bright future by Tearfund and local churches here, and it&#8217;s truly amazing to see.</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2sdsa2XUE1rr6vpvo1_1280.jpg"/><br/><p>A country with a brutal history is being given a bright future by Tearfund and local churches here, and it&#8217;s truly amazing to see.</p>
 <p>Meeting people who are finding creative ways out of poverty  alongside the local church has inspired me to use my own creativity to help more people do the same.</p>
 <p>I&#8217;m giving a signed print inspired by my trip to the first 60 people who give £3 a month (or more) to Tearfund.  (For a flavour of what this might look like, keep an eye on <a href="http://cambodia.richwells.me/">my scrapbook</a>)</p>
 <p>Giving is really easy:</p>
