--- a/_posts/tumblr/2014-05-14-a-big-thank-you.html
+++ b/_posts/tumblr/2014-05-14-a-big-thank-you.html
@@ -10,7 +10,7 @@ intro: "<p><span>Just wanted to say a huge thank you to everyone who gave to our
 img: "thank-you.jpg"
 ---
 
-<img src="/downloads/tumblr_files/tumblr_n5l1qt72sz1rr6vpvo1_1280.jpg"/><br/><p><span>Just wanted to say a huge thank you to everyone who gave to our </span><a href="http://www.tearfund.org/en/give/give_main/tfbloggers13/live/" target="_blank">#tfbloggers campaign</a><span>. Forty-one people signed up to give regularly, and it&#8217;s only after speaking to a few charity fundraisers that I&#8217;ve realised how incredible that number is. I&#8217;m sorting out the artwork prints this week and will be sending them out as soon as I can. <br/><br/></span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n5l1qt72sz1rr6vpvo1_1280.jpg"/><br/><p><span>Just wanted to say a huge thank you to everyone who gave to our </span><a href="http://www.tearfund.org/en/give/give_main/tfbloggers13/live/" target="_blank">#tfbloggers campaign</a><span>. Forty-one people signed up to give regularly, and it&#8217;s only after speaking to a few charity fundraisers that I&#8217;ve realised how incredible that number is. I&#8217;m sorting out the artwork prints this week and will be sending them out as soon as I can. <br/><br/></span></p>
 <p><img alt="I'm sending a print to everyone who signs up to give" src="http://richwells.me/img/imsendingaprint.jpg"/></p>
 <h2><br/>Still want to give?</h2>
 <p>It&#8217;s not too late to give and get some free artwork! giving is easy:</p>
