--- a/_posts/tumblr/2014-09-09-sketches-of-spain.html
+++ b/_posts/tumblr/2014-09-09-sketches-of-spain.html
@@ -15,14 +15,14 @@ intro: "<p>A few sketches and iPad doodles from a week away in Mallorca.</p>"
 ---
 <p>A few sketches and iPad doodles from a week away in Mallorca.</p>
 <p>
-    <img src="/downloads/sketches-of-spain-1.jpg"/>
+    <img src="{{ site.baseurl }}/downloads/sketches-of-spain-1.jpg"/>
 </p>
 <p>
-<img src="/downloads/sketches-of-spain.jpg"/>
+<img src="{{ site.baseurl }}/downloads/sketches-of-spain.jpg"/>
 </p>
 <p>
-    <img src="/downloads/sketches-of-spain-2.jpg"/>
+    <img src="{{ site.baseurl }}/downloads/sketches-of-spain-2.jpg"/>
 </p>
 <p>
-    <img src="/downloads/sketches-of-spain-3.jpg"/>
+    <img src="{{ site.baseurl }}/downloads/sketches-of-spain-3.jpg"/>
 </p>
