--- a/_posts/tumblr/2013-01-24-man-and-his-dog-in-ruskin-park.html
+++ b/_posts/tumblr/2013-01-24-man-and-his-dog-in-ruskin-park.html
@@ -10,4 +10,4 @@ tags:
 - procreate
 tumblr_url: http://blog.richwells.me/post/70817528480/man-and-his-dog-in-ruskin-park
 ---
-<img src="/downloads/tumblr_files/tumblr_my86kpWS2S1rr6vpvo1_1280.jpg"/><br/><p><span>Man and his dog in Ruskin Park.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my86kpWS2S1rr6vpvo1_1280.jpg"/><br/><p><span>Man and his dog in Ruskin Park.</span></p>
