--- a/_posts/tumblr/2013-01-30-late-afternoon-in-the-winter-gardens-just-as-the.html
+++ b/_posts/tumblr/2013-01-30-late-afternoon-in-the-winter-gardens-just-as-the.html
@@ -10,4 +10,4 @@ tags:
 - sheffield sketches
 tumblr_url: http://blog.richwells.me/post/70818112180/late-afternoon-in-the-winter-gardens-just-as-the
 ---
-<img src="/downloads/tumblr_files/tumblr_my86uuvx8B1rr6vpvo1_1280.jpg"/><br/><p><span>Late afternoon in the winter gardens, just as the sun was setting.</span></p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my86uuvx8B1rr6vpvo1_1280.jpg"/><br/><p><span>Late afternoon in the winter gardens, just as the sun was setting.</span></p>
