--- a/_posts/tumblr/2013-08-14-planet-earth-sketches.html
+++ b/_posts/tumblr/2013-08-14-planet-earth-sketches.html
@@ -8,4 +8,4 @@ tags:
 - procreate
 tumblr_url: http://blog.richwells.me/post/71755729440/planet-earth-sketches
 ---
-<img src="/downloads/tumblr_files/tumblr_myohjplgDj1rr6vpvo3_1280.jpg"/><br/><img src="/downloads/tumblr_files/tumblr_myohjplgDj1rr6vpvo4_1280.jpg"/><br/><br/><p>A couple of iPad drawings whilst watching a Planet Earth Amazon episode. </p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_myohjplgDj1rr6vpvo3_1280.jpg"/><br/><img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_myohjplgDj1rr6vpvo4_1280.jpg"/><br/><br/><p>A couple of iPad drawings whilst watching a Planet Earth Amazon episode. </p>
