--- a/_posts/tumblr/2013-11-20-i-saw-this-cheeky-chap-at-an-alpaca-farm-outside.html
+++ b/_posts/tumblr/2013-11-20-i-saw-this-cheeky-chap-at-an-alpaca-farm-outside.html
@@ -10,4 +10,4 @@ tags:
 - procreate
 tumblr_url: http://blog.richwells.me/post/70830864030/i-saw-this-cheeky-chap-at-an-alpaca-farm-outside
 ---
-<img src="/downloads/tumblr_files/tumblr_my8cztgeHN1rr6vpvo1_1280.jpg"/><br/><p>I saw this cheeky chap at an alpaca farm outside of Sheffield. I know he&#8217;s not an alpaca by the way- you had to pay to walk around a field to see those, and so we ended up going to the warm cafe instead. Made using Procreate on the iPad, which is excellent.  </p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_my8cztgeHN1rr6vpvo1_1280.jpg"/><br/><p>I saw this cheeky chap at an alpaca farm outside of Sheffield. I know he&#8217;s not an alpaca by the way- you had to pay to walk around a field to see those, and so we ended up going to the warm cafe instead. Made using Procreate on the iPad, which is excellent.  </p>
