--- a/_posts/tumblr/2014-02-13-yoomee-is-hiring.html
+++ b/_posts/tumblr/2014-02-13-yoomee-is-hiring.html
@@ -7,7 +7,7 @@ tags:
 - Yoomee
 tumblr_url: http://blog.richwells.me/post/76529841895/yoomee-is-hiring
 ---
-<img src="/downloads/tumblr_files/tumblr_n0xx6pbcA01rr6vpvo1_1280.jpg"/><br/><h2>Getting the right people on the bus</h2>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n0xx6pbcA01rr6vpvo1_1280.jpg"/><br/><h2>Getting the right people on the bus</h2>
 <blockquote>
 <p>Recruitment for us is about carefully growing a family, taking on board people with potential, and growing, moving forward together as equals. It&#8217;s about getting the right people on the bus first, and then figuring out where to go.</p>
 </blockquote>
