--- a/_posts/tumblr/2014-03-05-tom.html
+++ b/_posts/tumblr/2014-03-05-tom.html
@@ -6,4 +6,4 @@ body-class: 'blog'
 tags: []
 tumblr_url: http://blog.richwells.me/post/78848030346/tom
 ---
-<img src="/downloads/tumblr_files/tumblr_n22lmjnjV11rr6vpvo1_1280.jpg"/><br/><p>This is Tom, our current apprentice at Yoomee. We&#8217;re starting a scheme to teach young offenders to code, which is a really exciting and rewarding thing to be part of. <a href="http://yoomee.com/teaching-young-offenders-to-code-update" target="_blank">Read More about it here</a>.</p>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n22lmjnjV11rr6vpvo1_1280.jpg"/><br/><p>This is Tom, our current apprentice at Yoomee. We&#8217;re starting a scheme to teach young offenders to code, which is a really exciting and rewarding thing to be part of. <a href="http://yoomee.com/teaching-young-offenders-to-code-update" target="_blank">Read More about it here</a>.</p>
