--- a/_posts/tumblr/2014-07-25-stretch-o-clock.html
+++ b/_posts/tumblr/2014-07-25-stretch-o-clock.html
@@ -11,7 +11,7 @@ intro: "<p>My colleague <a href='https://twitter.com/matkins'>Matt</a> is probab
 <p>Aside from insane coding skills, Matt&#8217;s biggest legacy is teaching us some stretch moves that we do as a team every morning at 11am.</p>"
 tumblr_url: http://blog.richwells.me/post/92833407663/stretch-o-clock
 ---
-<img src="/downloads/tumblr_files/tumblr_n99xz6nbVC1rr6vpvo1_1280.jpg"/><br/><h2>Farewell Matkins!</h2>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n99xz6nbVC1rr6vpvo1_1280.jpg"/><br/><h2>Farewell Matkins!</h2>
 <p>My colleague <a href="https://twitter.com/matkins">Matt</a> is probably the cleverest person I know, and a nice guy too. Today is his last day at Yoomee before moving on to bigger and better things.</p>
 <p>Aside from insane coding skills, Matt&#8217;s biggest legacy is teaching us some stretch moves that we do as a team every morning at 11am. We started them after reading a <a href="http://www.diygenius.com/your-desk-job-is-killing-you-the-truth-about-sitting-down-infographic/">blog post</a> about how sitting at a computer is killing you. Turns out we&#8217;re not designed to be sitting all day hunched over a screen! Now stretching is part of our daily routine and is a good chance to stop, clear your head and talk to each other.</p>
 <p>As a leaving gift I made Matt a little framed print celebrating Stretch O’Clock.</p>
