Add image loaded thing for isotope

--- a/_posts/2014-11-18-christmas-film.html
+++ b/_posts/2014-11-18-christmas-film.html
@@ -6,9 +6,12 @@ body-class: 'blog'
 img: candles.jpg
 intro: 'Enjoyed daddy daycare this week.'
 tags:
-- photos
+- video
 ---
 
+<div class="fitvids wide">
+  <iframe src="//player.vimeo.com/video/113002294" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
 <img src="{{ site.baseurl }}/downloads/christmas-film.jpg" alt="" class="wide"/>
 
 <p>Enjoyed daddy daycare this week.</p>
