Lots of content updates

--- a/_posts/tumblr/2011-06-06-peace-in-the-park.html
+++ b/_posts/tumblr/2011-06-06-peace-in-the-park.html
@@ -9,6 +9,12 @@ tags:
 - sheffield
 tumblr_url: http://blog.richwells.me/post/40516753349/peace-in-the-park
 img: peace-in-the-park.jpg
+video: "<div class='fitvids'>
+  <iframe src='//player.vimeo.com/video/24719761?title=0&byline=0&portrait=0' width='400' height='225' frameborder='0' title='Peace in the park balloon release' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>"
+intro: "<p><span>On Saturday Bry and myself manned the balloon stall at Peace in the Park, Sheffield. The idea was to get people to write messages of peace, attach them to helium balloons and release them all together at 5pm. After a few sketchy moments transporting them across a field under a net we managed to do just that. It all turned out a bit sony bravia&#8230;</span></p>
+"
+
 ---
 <div class="fitvids wide">
-<iframe src="//player.vimeo.com/video/24719761?title=0&byline=0&portrait=0" width="400" height="225" frameborder="0" title="Peace in the park balloon release" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><br/><p><span>On Saturday Bry and myself manned the balloon stall at Peace in the Park, Sheffield. The idea was to get people to write messages of peace, attach them to helium balloons and release them all together at 5pm. After a few sketchy moments transporting them across a field under a net we managed to do just that. It all turned out a bit sony bravia&#8230;</span></p>
+<iframe src="//player.vimeo.com/video/24719761?title=0&byline=0&portrait=0" width="400" height="225" frameborder="0" title="Peace in the park balloon release" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+<p><span>On Saturday Bry and myself manned the balloon stall at Peace in the Park, Sheffield. The idea was to get people to write messages of peace, attach them to helium balloons and release them all together at 5pm. After a few sketchy moments transporting them across a field under a net we managed to do just that. It all turned out a bit sony bravia&#8230;</span></p>
