--- a/_posts/tumblr/2012-09-06-sophie-wells.html
+++ b/_posts/tumblr/2012-09-06-sophie-wells.html
@@ -10,6 +10,10 @@ tags:
 - daddy-daycare
 tumblr_url: http://blog.richwells.me/post/40172299711/sophie-wells
 img: introducing-sophie.jpg
+video: "<div class='fitvids'>
+  <iframe src='//player.vimeo.com/video/49013771?title=0&byline=0&portrait=0' width='400' height='225' frameborder='0' title='Sophie the sloth' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
+"
 ---
 <div class="fitvids wide">
 <iframe src="//player.vimeo.com/video/49013771?title=0&byline=0&portrait=0" width="400" height="225" frameborder="0" title="Sophie the sloth" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
