--- a/_posts/tumblr/2011-02-25-panasonic-gf1.html
+++ b/_posts/tumblr/2011-02-25-panasonic-gf1.html
@@ -9,6 +9,11 @@ tags:
 - sheffield
 img: gf1.jpg
 tumblr_url: http://blog.richwells.me/post/40516945239/panasonic-gf1
+video: "<div class='fitvids'>
+  <iframe src='//player.vimeo.com/video/20334460?title=0&byline=0&portrait=0' width='400' height='225' frameborder='0' title='Panasonic GF1 test' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+  "
 ---
 <div class="fitvids wide">
-<iframe src="//player.vimeo.com/video/20334460?title=0&byline=0&portrait=0" width="400" height="225" frameborder="0" title="Panasonic GF1 test" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><br/><p><span>After saving up for a while I bought a Panasonic GF1 last week, with a 20mm pancake lens. Really enjoying using it- perfect balance of quality and portability and does great video too. This is a quick video I made in imovie. Apologies for the boring shaky close ups!</span></p>
+<iframe src="//player.vimeo.com/video/20334460?title=0&byline=0&portrait=0" width="400" height="225" frameborder="0" title="Panasonic GF1 test" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+
+<br/><p><span>After saving up for a while I bought a Panasonic GF1 last week, with a 20mm pancake lens. Really enjoying using it- perfect balance of quality and portability and does great video too. This is a quick video I made in imovie. Apologies for the boring shaky close ups!</span></p>
