--- a/_posts/tumblr/2012-04-16-china.html
+++ b/_posts/tumblr/2012-04-16-china.html
@@ -9,6 +9,8 @@ tags:
 - travels
 img: china.jpg
 tumblr_url: http://blog.richwells.me/post/40172356803/a-few-months-ago-we-went-to-china-we-travelled
+video: "<div class='fitvids'>
+  <iframe src='//player.vimeo.com/video/40372602?title=0&byline=0&portrait=0' width='400' height='225' frameborder='0' title='China' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>"
 ---
 <div class="fitvids wide">
 <iframe src="//player.vimeo.com/video/40372602?title=0&byline=0&portrait=0" width="400" height="225" frameborder="0" title="China" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><br/><p>A few months ago we went to China. We travelled around the country with some amazing people and got to experience so many new sights, smells and tastes. I shot way too much video but have finally got round to making a summary of one second shots.</p>
